--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How Eric Went From Losing Money to Profitable Algo Trader</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">36 minutes ago</div>
+                        <div class="date">45 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -959,7 +959,7 @@
                     <div class="video-info">
                         <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>How Eric Went From Losing Money to Profitable Algo Trader</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">36 minutes ago</div>
+                            <div class="date">45 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8206,7 +8206,7 @@
                         <div class="video-info">
                             <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
