--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>A Twitter (X) Metric That Predicts Stocks</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">25 minutes ago</div>
+                        <div class="date">37 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Bach Got GOT by Arthur!😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1852,7 +1852,7 @@
                     <div class="video-info">
                         <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>A Twitter (X) Metric That Predicts Stocks</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">25 minutes ago</div>
+                            <div class="date">37 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -6207,7 +6207,7 @@
                         <div class="video-info">
                             <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Bach Got GOT by Arthur!😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
